[build-system]
requires = ["setuptools", "wheel"]

[project]
scripts = { "java-tools" = "java_tools.__main__:main" }
name = "java-tools"
version = "0.1.0"
description = "A python based CLI tool to simplify the time consuming, repetitive tasks of Java development."
readme = "README.md"
authors = [{ name = "Atharv Kurdukar", email = "3atharvkurdukar@gmail.com" }]
license = "MIT"
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Topic :: Software Development :: Build Tools",
]

[tool.black]
line-length = 88
target-version = ['py38', 'py39', 'py310']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''
